# sample-cpp-container

./: .gitignore  CMakeLists.txt  Dockerfile
src/: factorial.cpp  factorial.h  main.cpp  myclass.cpp  myclass.h
tests/: TestMyClass.cpp
